--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,11 +1,16 @@
 Jenkinsfile (Declarative Pipeline)
 pipeline {
-     agent { docker { image 'maven:3.3.3'} }
+     agent any 
      stages {
           stage('build') {      
                steps {
-                   sh 'mvn --version'
-               }
-          }
+                   sh 'echo "hello world"'
+                   sh '''
+                       echo "multiple shell
+                       ls -lah
+                    '''
+                }
+          }   
       }
+}
 
